[gd_scene load_steps=16 format=2]

[ext_resource path="res://Enemies/Bat.png" type="Texture" id=1]
[ext_resource path="res://Shadows/SmallShadow.png" type="Texture" id=2]
[ext_resource path="res://Overlays/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemies/Bat.gd" type="Script" id=4]
[ext_resource path="res://Utils/Stats.tscn" type="PackedScene" id=5]
[ext_resource path="res://Enemies/PlayerDetectionZone.tscn" type="PackedScene" id=6]
[ext_resource path="res://Overlays/Hitbox.tscn" type="PackedScene" id=7]
[ext_resource path="res://Overlays/SoftCollusion.tscn" type="PackedScene" id=8]
[ext_resource path="res://Enemies/WanderController.tscn" type="PackedScene" id=9]

[sub_resource type="Animation" id=1]
resource_name = "pulse"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Shadow:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.1, 1.1 ), Vector2( 1.1, 1.1 ), Vector2( 0.9, 0.9 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[sub_resource type="CircleShape2D" id=2]
radius = 4.0

[sub_resource type="CapsuleShape2D" id=3]
radius = 7.0
height = 6.0

[sub_resource type="CircleShape2D" id=4]
radius = 44.0114

[sub_resource type="CircleShape2D" id=5]
radius = 4.0

[sub_resource type="CircleShape2D" id=6]
radius = 8.0

[node name="Bat" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 4 )

[node name="Stats" parent="." instance=ExtResource( 5 )]
max_health = 2

[node name="WanderController" parent="." instance=ExtResource( 9 )]
visible = false

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
offset = Vector2( 0, -12 )
hframes = 5

[node name="Shadow" type="Sprite" parent="."]
scale = Vector2( 1.07818, 1.07818 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "pulse"
anims/pulse = SubResource( 1 )

[node name="Hitbox" parent="." instance=ExtResource( 7 )]
visible = false
collision_layer = 16
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 1, -16 )
shape = SubResource( 2 )

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]
visible = false
collision_layer = 8
collision_mask = 2
offset = Vector2( 0, -10 )

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -13 )
shape = SubResource( 3 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 6 )]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
modulate = Color( 1, 1, 1, 0.466667 )
shape = SubResource( 4 )

[node name="Collision" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 5 )

[node name="SoftCollusion" parent="." instance=ExtResource( 8 )]

[node name="CollisionShape2D" parent="SoftCollusion" index="0"]
shape = SubResource( 6 )
[connection signal="health_reached_zero" from="Stats" to="." method="_on_Stats_health_reached_zero"]
[connection signal="reached_target" from="WanderController" to="." method="_on_WanderController_reached_target"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]

[editable path="Hitbox"]

[editable path="Hurtbox"]

[editable path="PlayerDetectionZone"]

[editable path="SoftCollusion"]
